using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimationUtils
{
    public static class AnimationTriggers
    {
        public static string IS_IDLE = "Idle";
        public static string IS_RUNNING = "Running";
        public static string IS_JUMPING = "Jumping";
        public static string IS_SPECIAL_ACTION = "UsedSpecialAction";
        public static string IS_TOSS = "Tossed";
        public static string IS_GRAB = "Grabbed";
        public static string ENDED_SPECIAL_ACTION = "EndedSpecialAction";
    }
}
